--- a/src/Styling/background.css
+++ b/src/Styling/background.css
@@ -3,17 +3,6 @@ body, html {
   width: 100vw;
   height: 100%;
   background-size: cover;
-  /* min-height: 100%;
-  min-width: 1024px;
-  width: 100%;
-  height: auto;
-  position: relative;
-  top: 0;
-  left: 0; */
-  /* -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover; */
-  background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   overflow: scroll ;
@@ -28,7 +17,7 @@ list-group-mine .list-group-item {
   text-align: right;
   font-weight: 600;
   color: aliceblue;
-} */
+} 
 
 .list-group-mine .list-group-item:hover {
   background-color: #515557;
@@ -49,7 +38,7 @@ h3 {
   text-align: center;
 } 
 
-@media screen and (max-width: 1024px) { /* Specific to this particular image */
+@media screen and (max-width: 1024px) { Specific to this particular image
   img.bg {
     left: 50%;
     margin-left: -512px;   /* 50% */
